problem with flex

--- a/app/index.html
+++ b/app/index.html
@@ -36,11 +36,27 @@
 		<div class="home">
 			<div class="home-content">
 				<img src="img/logo-tm.png" alt="logo">
-				<h1 class="home-title uppercase">jwood<span>photography</span></h1>
+				<div class="title home-title uppercase"><span>jwood</span>photography</div>
 			</div>
 
 			<div class="scroll uppercase">scroll down to see more<i class="fa fa-angle-double-down"></i></div>
 		</div>
+	</section>
+
+	<section class="s-about">
+		<div class="about">
+			<div class="about-image">
+				<img class="img-responsive" src="img/jwood.jpg" alt="jwood">
+			</div>
+			<div class="about-text">
+				<div class="title about-text-title uppercase">about me</div>
+				<p>Mei te possit instructior, idque delenit qui et, dicit ludus commune vix ad. Ea modo dicam cetero mel, case disputationi at est. Ad nam adipisci dignissim posidonium, eius reque temporibus ne mea. Vero antiopam ea vim. Ei timeam electram vix. Eam at tollit erroribus, ea eum idque legere epicuri.</p>
+				<p>Sed quot legere minimum cu, ex mei fastidii mandamus intellegam, error consul ut per. Sed quot legere minimum cu, ex mei fastidii mandamus intellegam, error consul ut per.</p>
+				<div class="about-text-name">Jason Wood</div>
+			</div>
+		</div>
+
+		<div class="scroll uppercase">keep scrolling, there is still more to come.<i class="fa fa-angle-double-down inverse"></i></div>
 	</section>
 	
 	<link rel="stylesheet" href="css/main.min.css">
